desktop accordion styles with left and right colour blocks when open

--- a/rca/project_styleguide/templates/patterns/atoms/sprites/sprites.html
+++ b/rca/project_styleguide/templates/patterns/atoms/sprites/sprites.html
@@ -57,12 +57,12 @@
         <path d="M12 0.320312C5.4 0.320312 0 5.72031 0 12.3203C0 18.9203 5.4 24.3203 12 24.3203C18.6 24.3203 24 18.9203 24 12.3203C24 5.72031 18.6 0.320312 12 0.320312ZM9.6 17.7203V6.92031L16.8 12.3203L9.6 17.7203Z" fill="white"/>
     </symbol>
 
-    <symbol id="plus" viewBox="0 0 18 18" fill="none">
-        <path d="M18 8.14286H9.85714V0H8.14286V8.14286H0V9.85714H8.14286V18H9.85714V9.85714H18V8.14286Z" fill="black"/>
+    <symbol id="plus" viewBox="0 0 18 18">
+        <path d="M18 8.14286H9.85714V0H8.14286V8.14286H0V9.85714H8.14286V18H9.85714V9.85714H18V8.14286Z"/>
     </symbol>
 
-    <symbol id="minus" viewBox="0 0 18 2" fill="none">
-        <path d="M9.85714 0.144531H18V1.85882H9.85714H8.14286H0V0.144531H8.14286H9.85714Z" fill="white"/>
+    <symbol id="minus" viewBox="0 0 18 2">
+        <path d="M9.85714 0.144531H18V1.85882H9.85714H8.14286H0V0.144531H8.14286H9.85714Z"/>
     </symbol>
 
     <symbol id="logo" viewbox="0 0 162 70">
