--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -13,6 +13,7 @@
 
 // Components
 @import 'components/accordion';
+@import 'components/accordion-block';
 @import 'components/app';
 @import 'components/apply-intro';
 @import 'components/audience-nav-item';
