--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -45,6 +45,12 @@
                     {% include "patterns/organisms/programme_tabs/apply.html" %}
                 </div>
 
+                <section class="section bg bg--light">
+                    <div class="section__notch section__notch--top">
+                        <div class="section__notch-fill section__notch-fill--third-col"></div>
+                    </div>
+                </section>
+
                 <section class="section bg bg--light" id="contact">
                     <div class="section__container">
                         {% include "patterns/organisms/contact/contact.html" %}
