--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -5,7 +5,11 @@
     $notch-height-large: 100px;
 
     &__heading {
-        grid-column: 1;
+        grid-column: 1 / span 2;
+
+        @include media-query(medium) {
+            grid-column: 1 / span 1;
+        }
 
         @include media-query(large) {
             grid-column: 2 / span 2;
@@ -125,6 +129,18 @@
 
             @include media-query(large) {
                 padding-top: ($gutter * 7);
+            }
+        }
+
+        &:last-child {
+            padding-bottom: ($gutter * 2.5);
+
+            @include media-query(medium) {
+                padding-bottom: ($gutter * 3);
+            }
+
+            @include media-query(large) {
+                padding-bottom: ($gutter * 7);
             }
         }
     }
