--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -28,6 +28,7 @@
 @import 'components/carousel';
 @import 'components/contact';
 @import 'components/curriculum-intro';
+@import 'components/disclaimer';
 @import 'components/facilities';
 @import 'components/feature-image';
 @import 'components/featured-alumni';
