--- a/rca/static_src/sass/components/_accordion.scss
+++ b/rca/static_src/sass/components/_accordion.scss
@@ -75,10 +75,6 @@
             background-color: $color--white;
             color: $color--black;
         }
-
-        #{$root}__content {
-            display: block;
-        }
     }
 
     &:focus,
@@ -94,6 +90,7 @@
         padding-top: $gutter;
         padding-bottom: ($gutter * 1.75);
         position: relative;
+        outline: 0;
 
         &::after {
             content: '';
@@ -105,6 +102,7 @@
             transform: translate3d(100%, 0, 0);
             opacity: 0;
             transition: opacity $transition;
+            pointer-events: none;
 
             .is-open & {
                 opacity: 1;
@@ -220,6 +218,22 @@
 
     &__content {
         display: none;
-        margin-left: 40px;
+
+        .is-open & {
+            display: grid;
+
+            @include media-query(large) {
+                grid-template-columns: 1fr 1fr 1fr;
+            }
+        }
+    }
+
+    &__content-container {
+        @include media-query(large) {
+            grid-column: 2 / span 2;
+            padding-top: ($gutter * 2);
+            padding-right: ($gutter * 5.75);
+            padding-bottom: ($gutter * 3);
+        }
     }
 }
