--- a/rca/static_src/sass/components/_link.scss
+++ b/rca/static_src/sass/components/_link.scss
@@ -187,4 +187,9 @@
             }
         }
     }
+
+    .accordion & {
+        @include font-size(xxs);
+        margin-top: ($gutter * 1.5);
+    }
 }
