match accordion z-index and grid lines to design

--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -104,6 +104,7 @@ $z-index: (
     overlap: 20,
     free30: 30,
     headerLogo: 40,
+    under-gridlines: 45,
     gridlines: 50,
     above-gridlines: 60,
     header: 70,
