--- a/rca/static_src/sass/components/_accordion.scss
+++ b/rca/static_src/sass/components/_accordion.scss
@@ -81,10 +81,10 @@
 
     &__link {
         display: grid;
-        align-items: flex-start;
+        align-items: center;
         font-family: $font--primary;
         padding-top: $gutter;
-        padding-bottom: ($gutter * 1.75);
+        padding-bottom: $gutter;
         position: relative;
         outline: 0;
 
@@ -119,7 +119,6 @@
             }
         }
 
-
         .bg--dark & {
             color: $color--link-darkbg;
         }
@@ -140,6 +139,11 @@
 
         @include media-query(large) {
             grid-template-columns: 1fr 1fr 1fr;
+        }
+
+        &--with-preview {
+            align-items: flex-start;
+            padding-bottom: ($gutter * 1.75);
         }
     }
 
