Comment out the carousel until it has values to pass

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -58,7 +58,7 @@
 
     {% include "patterns/organisms/staff-overview/staff-overview--single.html" %}
 
-    {% include "patterns/organisms/facilities/facilities.html" with link=page.facilities_link title='Facilities' introduction=page.facilities_intro link_text="See all college facilities"  body=page.facilities_copy slideshow=page.facilities_gallery  %}
+    {% include "patterns/organisms/facilities/facilities.html" with link=page.facilities_link title='Facilities' introduction=page.facilities_intro link_text="See all college facilities"  body=page.facilities_copy slideshow=page.facilities_gallery  slideshow=page.facilities_gallery %}
 
     {% include "patterns/organisms/featured-alumni/featured-alumni.html" with title="Notable Alumni" introduction=page.notable_alumni_text alumni_links=page.notable_alumni_links %}
 
