--- a/rca/project_styleguide/templates/patterns/organisms/facilities/facilities.html
+++ b/rca/project_styleguide/templates/patterns/organisms/facilities/facilities.html
@@ -19,5 +19,5 @@
 </div>
 
 <div class="section__row facilities__slideshow">
-    {% include "patterns/organisms/slideshow/slideshow.html" with slideshow=page.facilities_gallery  modifier=slideshowModifier %}
+    {% include "patterns/organisms/slideshow/slideshow.html" with  modifier=slideshowModifier %}
 </div>
