--- a/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
+++ b/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
@@ -11,6 +11,6 @@
         </ul>
     </div>
 </div>
-<div class="section__row grid">
+{% comment %} <div class="section__row grid">
     {% include "patterns/organisms/carousel/carousel.html" %}
-</div>
+</div> {% endcomment %}
