Actually, wrap this in an if statement until we have data for it

--- a/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
+++ b/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
@@ -11,6 +11,8 @@
         </ul>
     </div>
 </div>
-{% comment %} <div class="section__row grid">
+{% if alumni_gallery %}
+<div class="section__row grid">
     {% include "patterns/organisms/carousel/carousel.html" %}
-</div> {% endcomment %}
+</div>
+{% endif %}
