--- a/rca/project_styleguide/templates/patterns/molecules/search/search.html
+++ b/rca/project_styleguide/templates/patterns/molecules/search/search.html
@@ -1,4 +1,4 @@
-<form action="{% url 'search' %}" method="get" role="search" class="search">
+<form action="https://www.rca.ac.uk/search" method="get" role="search" class="search">
     <input class="search__input input" type="text" placeholder="Search…" name="query"{% if search_query %} value="{{ search_query }}{% endif %}" data-search-input>
     <button class="search__button button" type="submit">
         <svg width="12px" height="8px" class="search__icon"><use xlink:href="#arrow"></use></svg>
