--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -30,6 +30,15 @@
                 margin-bottom: ($gutter * 1.5);
             }
         }
+
+        // Tab with different heading layout
+        #tab-panel-apply & { // sass-lint:disable-line no-ids
+
+            @include media-query(large) {
+                grid-column: 2 / span 1;
+            }
+
+        }
     }
 
     &__notch {
