--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -14,6 +14,7 @@
 // Components
 @import 'components/accordion';
 @import 'components/app';
+@import 'components/apply-intro';
 @import 'components/audience-nav-item';
 @import 'components/back-link';
 @import 'components/button';
@@ -40,6 +41,7 @@
 @import 'components/heading';
 @import 'components/hero';
 @import 'components/icon';
+@import 'components/image';
 @import 'components/image-caption-link';
 @import 'components/introduction';
 @import 'components/key-details';
@@ -63,6 +65,8 @@
 @import 'components/social-item';
 @import 'components/staff-detail';
 @import 'components/staff-overview';
+@import 'components/step-item';
+@import 'components/steps';
 @import 'components/tabs';
 @import 'components/tab-item';
 @import 'components/tab-nav';
