you guess it, linting!

--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -32,12 +32,12 @@
         }
 
         // Tab with different heading layout
-        #tab-panel-apply & { // sass-lint:disable-line no-ids
+        #tab-panel-apply & {
+            // sass-lint:disable-line no-ids
 
             @include media-query(large) {
                 grid-column: 2 / span 1;
             }
-
         }
     }
 
