Adjusting tab height for mobile

--- a/rca/static_src/sass/components/_contact-anchor.scss
+++ b/rca/static_src/sass/components/_contact-anchor.scss
@@ -1,4 +1,8 @@
 .contact-anchor {
     position: relative;
-    top: -40px; // height of tabs
+    top: -39px; // height of tabs
+
+    @include media-query(medium) {
+        top: -59px; // height of tabs
+    }
 }
