--- a/rca/static_src/sass/components/_tab-nav.scss
+++ b/rca/static_src/sass/components/_tab-nav.scss
@@ -41,7 +41,7 @@
         flex-wrap: nowrap;
         flex-direction: row;
         grid-column: 1 / span 2;
-        padding: $gutter;
+        padding: ($gutter / 2) $gutter;
         overflow-x: auto;
 
         @include media-query(medium) {
