--- a/rca/static_src/sass/components/_accordion.scss
+++ b/rca/static_src/sass/components/_accordion.scss
@@ -3,21 +3,32 @@
     @include z-index(above-gridlines);
     transition: background-color $transition;
     position: relative;
+    grid-column: 1 / span 2;
+
+    @include media-query(large) {
+        grid-column: 2 / span 3;
+    }
 
     .bg--dark & {
         border-bottom: 1px solid $color--grid-line-light;
         border-right: 1px solid $color--grid-line-light;
         background-color: $color--link-lightbg;
+        border-left: 1px solid $color--grid-line-light;
+
+        @include media-query(large) {
+            border-left: 0;
+        }
     }
 
     .bg--light & {
         border-right: 1px solid $color--grid-line-dark;
         border-bottom: 1px solid $color--grid-line-dark;
         background-color: $color--link-darkbg;
-    }
+        border-left: 1px solid $color--grid-line-dark;
 
-    @include media-query(large) {
-        grid-column: 2 / span 3;
+        @include media-query(large) {
+            border-left: 0;
+        }
     }
 
     &:first-child {
@@ -143,13 +154,14 @@
 
         &--with-preview {
             align-items: flex-start;
-            padding-bottom: ($gutter * 1.75);
+
+            @include media-query(medium) {
+                padding-bottom: ($gutter * 1.75);
+            }
         }
     }
 
     &__heading {
-        transition: color $transition;
-
         .bg--dark & {
             color: $color--link-darkbg;
         }
@@ -171,8 +183,13 @@
 
     &__preview-text {
         color: $color--meta;
-        margin: 0;
+        margin: ($gutter / 2) 0 0;
         transition: color $transition;
+        max-width: 65%;
+
+        @include media-query(medium) {
+            margin: 0 0 0 $gutter;
+        }
 
         .is-open & {
             .bg--dark & {
@@ -183,21 +200,26 @@
                 color: $color--link-darkbg;
             }
         }
-
-        @include media-query(large) {
-            max-width: 65%;
-        }
     }
 
     &__meta {
-        grid-column: 2 / span 2;
+        grid-column: 1 / span 1;
         display: flex;
+
+        @include media-query(medium) {
+            grid-column: 2 / span 2;
+        }
     }
 
     &__icon {
         justify-self: flex-end;
         margin-right: $gutter;
         margin-left: auto;
+        margin-top: -$gutter;
+
+        @include media-query(medium) {
+            margin-top: 0;
+        }
 
         .bg--dark & {
             fill: $color--link-darkbg;
@@ -245,11 +267,12 @@
     }
 
     &__content-container {
+        padding-top: ($gutter * 2);
+        padding-right: ($gutter * 5.75);
+        padding-bottom: ($gutter * 3);
+
         @include media-query(large) {
             grid-column: 2 / span 2;
-            padding-top: ($gutter * 2);
-            padding-right: ($gutter * 5.75);
-            padding-bottom: ($gutter * 3);
         }
     }
 }
