add heading with text component

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
@@ -6,5 +6,6 @@
     <div class="section__notch section__notch--top">
         <div class="section__notch-fill section__notch-fill--second-col"></div>
     </div>
+    {% include "patterns/molecules/heading-with-text/heading-with-text.html" %}
     {% include "patterns/organisms/accordion-block/accordion-block.html" %}
 </section>
