--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -41,6 +41,7 @@
 @import 'components/form-item';
 @import 'components/grid';
 @import 'components/heading';
+@import 'components/heading-with-text';
 @import 'components/hero';
 @import 'components/icon';
 @import 'components/image';
