refactor last section notch spacing

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
@@ -1,8 +1,8 @@
-<section class="section bg bg--dark">
+<section class="section section--start bg bg--dark">
     {% include "patterns/organisms/curriculum-intro/curriculum-intro.html" %}
 </section>
 
-<section class="section bg bg--light">
+<section class="section section--end bg bg--light">
     <div class="section__notch section__notch--top">
         <div class="section__notch-fill section__notch-fill--second-col"></div>
     </div>
