--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/fees-and-funding.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/fees-and-funding.html
@@ -1,4 +1,4 @@
-<section class="section bg bg--dark">
+<section class="section section--start section--end bg bg--dark">
     <header class="section__header grid">
         <h2 class="section__heading section__heading--primary heading heading--two">{{ tab_section.title }}</h2>
     </header>
@@ -112,4 +112,10 @@ Please note the application dates listed, as they can vary.</p>
 
     </div>
 
+</section>
+
+<section class="section bg bg--light">
+    <div class="section__notch section__notch--top">
+        <div class="section__notch-fill section__notch-fill--third-col"></div>
+    </div>
 </section>
