--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/requirements.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/requirements.html
@@ -1,3 +1,9 @@
-<section class="section bg bg--dark">
+<section class="section section--start bg bg--dark">
     Requirements content here
+</section>
+
+<section class="section bg bg--light">
+    <div class="section__notch section__notch--top">
+        <div class="section__notch-fill section__notch-fill--third-col"></div>
+    </div>
 </section>
