--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -1,4 +1,4 @@
-<section class="section bg bg--dark">
+<section class="section section--start bg bg--dark">
 
     <div class="section__row programme-overview">
         <header class="section__header grid">
@@ -64,7 +64,7 @@
 
 </section>
 
-<section class="section bg bg--dark">
+<section class="section section--end bg bg--dark">
 
     <div class="section__notch section__notch--top">
         <div class="section__notch-fill section__notch-fill--third-col"></div>
@@ -80,5 +80,11 @@
             {% include "patterns/organisms/news/news.html" %}
         </div>
 
+    </div>
+</section>
+
+<section class="section bg bg--light">
+    <div class="section__notch section__notch--top">
+        <div class="section__notch-fill section__notch-fill--third-col"></div>
     </div>
 </section>
