--- a/rca/static_src/sass/components/_accordion-block.scss
+++ b/rca/static_src/sass/components/_accordion-block.scss
@@ -2,6 +2,10 @@
     overflow: hidden;
     padding: ($gutter * 4) 0;
 
+    @include media-query(large) {
+        padding: ($gutter * 4) 0 ($gutter * 8);
+    }
+
     &__heading {
         grid-column: 1 / span 1;
         margin-bottom: $gutter;
